コードがコピーできないバグ修正

--- a/html/divTools/index.html
+++ b/html/divTools/index.html
@@ -379,7 +379,7 @@
                             onclick="copyToClipboard(this.id);">コードをコピー</button>
                     </div>
                     <textarea class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4"
-                        id="outputCode">ここはコード領域</textarea>
+                        id="codeBlock">ここはコード領域</textarea>
                 </div>
             </div>
         </div>
