--- a/html/divTools/index.html
+++ b/html/divTools/index.html
@@ -380,7 +380,7 @@
                     </div>
                     <textarea class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4"
                         id="codeBlock"
-                        readonly>ここはコード領域</textarea>
+                        readonly><div class=""></div></textarea>
                 </div>
             </div>
         </div>
