--- a/html/usage/index.html
+++ b/html/usage/index.html
@@ -32,6 +32,55 @@
                 <span class="hidden lg:inline">Tools</span></a>
         </div>
     </div>
+
+    <div class="flex m-3">
+        <div class="h-screen w-1/4 m-8">
+            <div class="mb-8 w-full">
+                <h3 class="text-4xl font-semibold font-mono">Step 1</h3>
+                <div class="h-96">
+                    <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+
+                    </div>
+                    <div class="h-1/2 border-2 border-black rounded-lg flex items-center">
+                        <img src="img/step1.png" >
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-1/8 m-8"></div>
+
+        <div class="h-screen w-1/4 m-8">
+            <div class="mb-8 w-full">
+                <h3 class="text-4xl font-semibold font-mono">Step 2</h3>
+                <div class="h-96">
+                    <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+
+                    </div>
+                    <div class="h-1/2 border-2 border-black rounded-lg flex items-center">
+                        <img src="img/step2.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w-1/8 m-8"></div>
+
+        <div class="w-1/4 m-8">
+            <div class="mb-8 w-full">
+                <h3 class="text-4xl font-semibold font-mono">Step 3</h3>
+                <div class="h-96">
+                    <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+
+                    </div>
+                    <div class="h-1/2 border-2 border-black rounded-lg flex items-center">
+                        <img src="img/step3.png">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
 </body>
 
 </html>
