--- a/html/imgTools/index.html
+++ b/html/imgTools/index.html
@@ -108,7 +108,7 @@
                     <div class="md:flex md:flex-row md:justify-between md:space-x-2 py-1 w-full md:place-items-center">
                         <span class="block text-xl">Contrast</span>
                         <div class="flex float-right">
-                            <p class="w-auto text-xl mx-4 value" id="contrastValue">0</p>
+                            <p class="w-auto text-xl mx-4 value" id="contrastValue">None</p>
                             <input type="range" min="0" max="5" id="contrast" value="0">
                         </div>
                     </div>
@@ -117,7 +117,7 @@
                     <div class="md:flex md:flex-row md:justify-between md:space-x-2 py-1 w-full md:place-items-center">
                         <span class="block text-xl">DropShadow</span>
                         <div class="flex float-right">
-                            <p class="w-auto text-xl mx-4 value" id="dropShadowValue">Auto</p>
+                            <p class="w-auto text-xl mx-4 value" id="dropShadowValue">None</p>
                             <input type="range" min="0" max="5" id="dropShadow" value="0">
                         </div>
                     </div>
@@ -135,7 +135,7 @@
                     <div class="md:flex md:flex-row md:justify-between md:space-x-2 py-1 w-full md:place-items-center">
                         <span class="block text-xl">Saturate</span>
                         <div class="flex float-right">
-                            <p class="w-auto text-xl mx-4 value" id="saturateValue">0</p>
+                            <p class="w-auto text-xl mx-4 value" id="saturateValue">None</p>
                             <input type="range" min="0" max="4" id="saturate" value="0">
                         </div>
                     </div>
@@ -152,7 +152,7 @@
                     <div class="md:flex md:flex-row md:justify-between md:space-x-2 py-1 w-full md:place-items-center">
                         <span class="block text-xl">Opacity</span>
                         <div class="flex float-right">
-                            <p class="w-auto text-xl mx-4 value" id="opacityValue">0</p>
+                            <p class="w-auto text-xl mx-4 value" id="opacityValue">None</p>
                             <input type="range" min="0" max="14" id="opacity" value="0">
                         </div>
                     </div>
