Usageとりあえず完成

--- a/html/usage/index.html
+++ b/html/usage/index.html
@@ -33,52 +33,32 @@
         </div>
     </div>
 
-    <div class="flex m-3">
-        <div class="h-screen w-1/4 m-8">
-            <div class="mb-8 w-full">
-                <h3 class="text-4xl font-semibold font-mono">Step 1</h3>
-                <div class="h-96">
-                    <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+    <div class="container px-8 mx-auto my-12 grid grid-cols-3 gap-24 w-full">
 
-                    </div>
-                    <div class="h-1/2 border-2 border-black rounded-lg flex items-center">
-                        <img src="img/step1.png" >
-                    </div>
+        <div class="mb-8 h-full w-full">
+            <h3 class="text-4xl font-semibold font-mono">Step 1</h3>
+                <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+                    <p class="font-mono font-medium text-xl">目的に応じたページに移動しましょう。<br>・レイアウト→Div Tools<br>・テキスト→Text Tools<br>・画像→Image Tools</p>
                 </div>
-            </div>
+                <img src="img/step1.png" class="w-full border-2 border-black rounded-lg flex items-center">
         </div>
 
-        <div class="w-1/8 m-8"></div>
-
-        <div class="h-screen w-1/4 m-8">
-            <div class="mb-8 w-full">
-                <h3 class="text-4xl font-semibold font-mono">Step 2</h3>
-                <div class="h-96">
-                    <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
-
-                    </div>
-                    <div class="h-1/2 border-2 border-black rounded-lg flex items-center">
-                        <img src="img/step2.png">
-                    </div>
-                </div>
+        <div class="mb-8 h-full w-full">
+            <h3 class="text-4xl font-semibold font-mono">Step 2</h3>
+            <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+                <p class="font-mono font-medium text-xl">プレビューや値を見ながら、自分の納得のいくようにパラメータを調整しましょう。</p>
             </div>
+            <img src="img/step2.png" class="w-full border-2 border-black rounded-lg flex items-center">
         </div>
 
-        <div class="w-1/8 m-8"></div>
-
-        <div class="w-1/4 m-8">
-            <div class="mb-8 w-full">
-                <h3 class="text-4xl font-semibold font-mono">Step 3</h3>
-                <div class="h-96">
-                    <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
-
-                    </div>
-                    <div class="h-1/2 border-2 border-black rounded-lg flex items-center">
-                        <img src="img/step3.png">
-                    </div>
-                </div>
+        <div class="mb-8 h-full w-full">
+            <h3 class="text-4xl font-semibold font-mono">Step 3</h3>
+            <div class="h-1/2 border-2 border-black rounded-lg mb-8 flex items-center">
+                <p class="font-mono font-medium text-xl">コードが出力されます。右側にある「コードをコピー」ボタンをクリックし、自分のソースコードに貼り付けましょう。</p>
             </div>
+            <img src="img/step3.png" class="w-full border-2 border-black rounded-lg flex items-center">
         </div>
+
     </div>
 
 </body>
