</img>はいらない定期

--- a/html/imgTools/index.html
+++ b/html/imgTools/index.html
@@ -196,7 +196,7 @@
                 <div class="h-3/4 flex flex-col mb-8">
                     <h3 class="text-3xl font-mono font-semibold">Preview</h3>
                     <div class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4" id="previewBlock">
-                        <img src="img/ここに画像の名前を入力してね.jpg"></img>
+                        <img src="img/ここに画像の名前を入力してね.jpg">
                     </div>
                 </div>
                 <div class="h-1/2 flex flex-col mb-8 mt-12">
@@ -206,7 +206,7 @@
                             class="border-2 rounded-full transition duration-300  border-slate-300 hover:border-slate-800 hover:bg-slate-800 hover:text-slate-100 px-2 py-1 m-1"
                             onclick="copyToClipboard(this.id);">コードをコピー</button>
                     </div>
-                    <textarea readonly class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4" id="codeBlock"></textarea>
+                    <textarea readonly class="flex-auto my-1 ml-4 border-2 rounded-lg border-slate-300 p-4" id="codeBlock"><img src="img/ここに画像の名前を入力してね.jpg"></textarea>
                 </div>
             </div>
         </div>
