--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/fadeout.css">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="js/titleScroll.js"></script>
-    <title>TailwindCSS DevTools</title>
+    <title>TailwindCSS DevTools &emsp;</title>
 </head>
 
 <body>
