--- a/html/textTools/index.html
+++ b/html/textTools/index.html
@@ -250,6 +250,27 @@
                     </div>
                 </div>
             </div>
+
+            <div class="mb-8 w-full">
+                <h3 class="text-3xl font-semibold font-mono">Spacing</h3>
+                <div class="flex flex-col pl-4">
+                    <div class="md:flex md:flex-row md:justify-between md:space-x-2 py-1 w-full md:place-items-center">
+                        <span class="block text-xl">行間</span>
+                        <div class="flex float-right">
+                            <p class="w-auto text-xl mx-4 value" id="lineHeightValue">none</p>
+                            <input type="range" min="0" max="8" id="lineHeightParam" value="0">
+                        </div>
+                    </div>
+
+                    <div class="md:flex md:flex-row md:justify-between md:space-x-2 py-1 w-full md:place-items-center">
+                        <span class="block text-xl">文字の間隔</span>
+                        <div class="flex float-right">
+                            <p class="w-auto text-xl mx-4 value" id="letterSpacingValue">none</p>
+                            <input type="range" min="0" max="6" id="letterSpacingParam" value="0">
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
 
         <div id="previewAndCode" class="lg:w-1/2 m-8 lg:relative">
